Update delays and tracking
